# CogModel-AP-DR

./: .gitignore  README.md  conflict.txt  environment.yml
hw1/: conflict.txt  pi_approx.py
hw1/seir/: .gitignore  environment.yml  main.py  pyproject.toml
hw1/seir/simulation/: __init__.py  simulator.py
hw1/seir/viz/: __init__.py  plot_seir.py
hw2/: P5_Mystery.py  P7_Class.py  P7_Function.py  P7_Main.py  posterior_2d.py  posterior_3d_bonus.py
hw3/p2/: p2.py
hw3/p4/: p4.py
hw3/p5/: model.stan  p5.py
hw3/p6/: diffusion_multiple  diffusion_multiple.stan  p6.py
hw4/p2/: mpt_1ht  mpt_1ht.stan  mpt_2ht  mpt_2ht.stan  p2.py
hw4/p3/: p3.py  speed_dating.stan
hw4/p4/: p4.py  speed_dating_pred  speed_dating_pred.stan
